# bearch-aur

./: Cargo.toml  README.md
src/: alpm.rs  aur.rs  cli.rs  main.rs
