[package]
name = "bearch-aur"
version = "0.1.0"
edition = "2021"
description = "BEAUR - Rust AUR Client for Arch Linux"
authors = ["Berke Oruc <berke@oruc.dev>"]
license = "MIT"
repository = "https://github.com/BerkeOruc/bearch-aur"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }